--- a/microbes.tex
+++ b/microbes.tex
@@ -32,6 +32,47 @@
 \clearpage
 
 \section{Introduction}
+\section{Emma's Bit}
+\subsection{What Are Microbes?}
+Microbes are defined as living organisms that are too small to be seen with the naked eye. Most are single celled but they can be multicellular too. There are four different types of microorganisms, bacteria, algae fungi and protis , and within these groups there is large diversity. Microbes metabolise in a variety of ways, such as anaerobically, via fermentation or lithotrophy.  Microbes are an integral part of the nitrogen cycle, the carbon cycle and producing oxygen; all of which help maintain the Earth?s atmosphere . Without microbes, the planet would be a very different place.
+\\
+\\
+Microbes have inhabited the Earth for over 3 billion years . They were the first forms of life on the planet and, for most of the Earth?s history, the only form of life on the planet. They have been found in extremes of the Earth?s environment, such as under the sea ice in Antarctica , the Mariana Trench in the Pacific Ocean  and Mammoth Hot Springs in Yellowstone Park, as they adapt easily to their surroundings. 
+\\
+\\
+Microbes adapt easily because they can evolve at a fast rate due to their simple structure and the nature of their reproduction. Microbes can evolve asexually and sexually. Methods of asexual reproduction are binary fission, mitosis, budding, spore formation, cytokinesis and schizogony . Although bacteria do not have nuclei, they can be considered to reproduce sexually in a process called conjugation . Genetic material is transferred between two cells using a pilus. This means that bacteria can adapt quickly to new environments as desirable traits can be passed along to different cells. It is thought that this method is the key factor for the survival ability of microorganisms.  
+\\
+\\Many of the aspects of the structure of microorganisms are thought to be because of the effects of gravity. The cytoskeleton is responsible for the maintaining the shape of a cell and the support and movement of a cell. The support that a cytoskeleton provides is necessary against a cell?s weight.  Flagellae are a common feature of microorganisms, allowing cell motility. Being able to propel themselves and control their position means it is possible to reach nutrients and safer environments.  The gravity on Earth has also led to the evolution of gravity receptors. Knowing the acceleration of prey or predators is important for many living cells as it could be essential for survival.   
+\\
+\\Microbes have many different uses on Earth. Microbes can be used to make wine, beer and whiskey in the alcohol industry, cheese, coffee and bread in the food industry and antibiotics, vitamins and insulin in the medical industry . It is believed that microbes will be able to be used in space, for future ventures such as biomining , life support machines  and biofuels.  However, microbes will not act the same in space as they do on Earth, due to the different conditions, and their behaviour in microgravity must be studied before fully understanding their functionality. 
+\\
+\\Microgravity, as the name suggests, is when the gravitational force experienced by a body is small . It can be achieved in two different ways. The first is not being close to any large bodies of mass which have a large gravitational attraction (such as the Earth) and the second is being in free fall. 
+
+\subsection{Why Should the Effects of Microgravity on Microbes be Studied?}
+Studying the effects of microgravity on microbes has benefits on Earth and in space. It will aid academic learning, help with medical advances and developments and could contribute key ideas and technology to space travel and exploration.
+\\ \\It can give a better understanding of the evolution of life on Earth. Microbes are the earliest life form on Earth and by learning about their behaviour in microgravity may help explain why they evolved as they did under the gravitational conditions on Earth.
+\\ \\All living creatures have evolved under the effects of gravity.  The skeleton of land dwelling creatures is to support the mass against the effects of gravity. The size of animals is restricted by gravity. Many of the internal processes of terrestrial life, such as circulation, have had to work against the effects of gravity as blood is needed to pump all around the body. By understanding how gravity affects simple cells, like microorganisms, it can lead to a better knowledge of more complicated life forms and how the cells within the body work.
+\\ \\It can also give an indication of possible forms of extra-terrestrial life. If extra-terrestrial life does exist, it is likely that they have evolved from microorganisms too as these are the simplest forms of life and that they have not experienced the same gravity as there is on Earth.
+\\ \\There are also practical uses to studying microbes in space. One contemporary issue are ?super viruses? . This is the resistance that microbes and viruses have against modern medicine because of their evolutionary prowess. Studying the effects of microgravity will allow insight into the genetic basis of infection. Any change in behaviour could help teach how pathogens evolve and cause disease. This could lead to advances in immunity against infections and viruses.
+\\ \\Microgravity provides a completely different environment from what is typically experienced on Earth. It has led to developments in biotechnology. More efficient ways of microencapsulation, a method of delivering medicine to parts of the body, have been found due to experiments on the International Space Station . Protein crystals that are created under microgravity are larger and more precisely ordered than those on Earth . Research into proteins is important in medicine for the development of drugs and necessary treatments for illnesses.  Stem cells are also affected by microgravity  and investigations into this could comprehend the properties of stem cells.
+\\ \\Research into the effects of microgravity is important for space travel for two different reasons. One is the effect it has on the human body and one is possible uses of microbes in space.
+\\ \\Astronauts have a lowered immune system in space  so any change in microbe behaviour could affect them. To ensure the long term health and survival of space explorers, the behaviour of harmful microbes needs to be known. This is particularly relevant at the moment, with the manned Mars mission . In order for the expedition to be successful, all measures have to be taken concerning astronauts? health.
+\\ \\Microbes could also be useful in space travel in the future for life support, biofuel and biomining. As they behave differently under microgravity, they cannot be utilised until their behaviour is researched and fully known or until it can mimic that on Earth. This will be discussed in full in later chapters.
+
+\section{Effects of Microgravity on Microbes}
+
+Studies have shown three common effects of microgravity on microbes. There is an increase in growth rate, microbes become more virile and there is an increase in biofilm production. Although it is not fully understood which mechanisms cause these, reasonable suggestions have been made. These are explored below. 
+\subsection{Causes}
+Convection is a form of energy transfer due to heat . It is attributed to hotter materials in a substance rising and colder materials in a substance sinking. Hotter materials are less dense and therefore lighter and colder materials are denser and therefore heavier, causing the movement. It is an effect of gravity. 
+\\
+\\Brownian motion is a form of diffusion . It is the random movement of particles in a fluid. It occurs where the lighter molecules of the fluid collide with the heavier particles, causing small fluctuations in movement. The fluid molecules are in random thermal motion and create an imbalance of forces on the particles. A visual representation of Brownian motion may be seen in diagram [THIS], where the large yellow particle is the particle, the smaller black particles are the molecules of fluid and the blue line is the path.
+\\ \\It is believed that one of the reasons for the change in behaviour of microbes is that microbes only undergo one form of motion; Brownian motion. In space, the effects of gravity are too low for convection to happen . 
+\\ \\Convection is thermodynamic and creates relatively fast movement of the particles. Convection creates sedimentation; layers of more dense particles at the bottom and less dense particles at the top of the culture . Convection leads to mixing . Both of these processes contribute to microbial behaviour as they affect how microbes receive nutrients and therefore survive. Convection is also a factor of how microbes grow and their shape.  The distribution of nutrients in a fluid is highly dependent on the convection currents and microbes will adapt their shape in order to receive the optimum amount of nutrients. Convection separates by-products from the cells themselves.  These by-products can also have an effect on the microbes? growth.
+\\ \\There are many indirect reasons for an increase in growth rates as microbial growth is not a simple process but they all share one cause; the reduction of extracellular mass transfer.  This has been observed in many of the studies done. Lack of convection means that mass is only transferred due to Brownian motion, which is a lot slower and less efficient. This leads to a change in nutrient and by-product distribution which affects lag time and metabolism rates.
+\\ \\The decrease in lag time and the increase in metabolism could contribute to the increase in growth rates. Lag time is a phase in the microbial growth cycle in which microbes adapt to the surrounding and there is no cell division, only cell growth.  Microbes synthesise necessary proteins, co-enzymes and vitamins for growth and repair in this time. A reduced lag time often means an increased growth time.  It is thought that the decrease in lag time in microgravity conditions is because of the lack of separation of by-products. Many of the substances microbes excrete are useful for the growth and repair in the lag phase and, in an absence of convection, stay close to the cells. It has been shown that carbon dioxide, a common by-product, reduces lag time and excreted enzymes may help with growth . The lack of layers in the microbe cultures may also be responsible for decreased lag time. Instead of the top layer receiving all of the nutrients and the bottom layer receiving all the by-products, the particles all have a relatively equal chance of receiving either. This is because there are no layers and the particles are instead positioned relatively randomly . It is believed that that the efficiency of the metabolism of the microbes increases for the same reason.
+\\ \\Studies have suggested that without convection currents, cells may grow in a similar manner to protein crystals.  This is because the growth of crystals on Earth are restricted by the unstable depletion zone; an area around the microbe of low protein concentration prone to small convection currents. In microgravity, there are no convection currents so the depletion zone is quasistable which causes larger and more uniform growth of the crystals. \\ \\
+Doesn?t appear virility and biofilm is understood/known at all. I don?t really understand virulence/biolfilms but I will try and explain them and relate to reasons already mentioned.
+
 \section{A1}
 
 \section{Microbial Fuel Cells}
@@ -61,7 +102,7 @@ A solution to this problem could be to use a membrane-free cell. In this setup, 
 
 \begin{figure}
 \centering
-\includegraphics{images/2membranelessmfc.png}
+\includegraphics[scale=3.0]{images/2membranelessmfc.png}
 \caption{\cite{ghangrekar2007performance}}
 \label{fig:2membranelessmfc}
 \end{figure}
